# ASD-lab2b

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/models/: Patient.py
