[project]
name = "lab2b"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Ibrahim",email = "ahmedm3377@yahoo.com"}
]
readme = "README.md"
packages = [{include = "src"}]
[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pydantic =">2.11.9,<3.0.0"
pendulum = ">=3.1.0,<4.0.0"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]
